# noer

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  index.scss  markdown.css  post.scss
docs/: index-4029ea9af4a3e957.js  index-4029ea9af4a3e957_bg.wasm  index-7a6df203d5cfef54.js  index-7a6df203d5cfef54_bg.wasm  index-97a9917296032aa9.js  index-97a9917296032aa9_bg.wasm  index.html  post.css
docs/posts/: 2020-04-19-A-free-and-unlimited-translator.rmd  2021-02-08-dance-with-rust-and-python-pip-1-packaging-rust-with-pythons-pip.rmd  2021-02-08-dance-with-rust-and-python-pip-2-rust-interface-pyo3.rmd  2021-04-07-advanced-programming-tips-move-clone-copy.rmd  2021-10-10-demo-16.rmd  2022-01-20-minimal-markdown-blog-CMS-for-static-site.rmd
posts/: 2021-01-17-high-order-pointer-in-c-rust.rmd  2021-04-05-advanced-programming-tips-memory-layouts.rmd  2021-07-23-how-to-build-app-with-dyer.rmd  2021-10-10-demo.rmd  2022-03-11-file-manipulation-in-web-assembly.rmd  2022-04-19-A-free-and-unlimited-translator.rmd  markdown.index
src/: constant.rs  content.rs  main.rs  parser.rs
src/components/: pagination.rs  post_card.rs
src/pages/: mod.rs  post.rs  post_list.rs
